# JVMTI-RT-Capability-Unlock

./: .clang-format  CMakeLists.txt  README.md
cmake/: jvmti-unlock-config.cmake.in
include/: jvmti_unlock.h
src/: hooks.cpp  hooks.h  jvmti_unlock.cpp  mem_scan.c  mem_scan.h  win_internals.h
